Fixed spacing in About page

--- a/src/About.css
+++ b/src/About.css
@@ -7,7 +7,6 @@
   justify-content: center;
   padding: 20px;
   text-align: left;
-  height: 90vh;
   background-attachment: fixed;
 }
 
@@ -36,18 +35,21 @@
 
 .about-content {
   display: flex;
-  align-items: center;
+  align-items: flex-start; /* Adjusted to align content to the start */
   justify-content: center;
-  margin-top: 20px; /* Adjusted margin to separate the content from the header */
+  margin-top: 20px;
 }
 
 .about-image {
-  flex: 1;
+  flex: 1; /* Allow the image to take up available space */
   margin-right: 20px;
+  max-width: 400px;
 }
 
 .about-text {
-  flex: 2;
+  flex: 2; /* Allow the text to take up available space */
+  max-width: 600px;
+  margin-top: 50px;
 }
 
 .about-text p {
